# sparse-dense-perf

./: .gitignore  CMakeLists.txt  README.md  blocked-mm-bench.cpp  io.h  matrix_benchmark.cpp  matrix_benchmark.cu  plot.py  run_bench.sh  run_bench_mist.sh  run_bench_narval.sh  spmm-blocked-bench.cpp  spmm_benchmark.cpp  sptrsv_benchmark.cpp
report/: results_2.json
